--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
-<!doctype html>
-<html>
-  <head>
-    <title>My First Website</title>
-    <link rel="stylesheet" href="novan1.css" />
-  </head>
-  <body>
-    <h1>Hello, I'm Novan</h1>
-    <p>I am learning web development.</p>
-    <button>Click Me</button>
-    <script src="script.js"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>For My Forever</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <main class="container">
+    <section class="card">
+      <h1 class="title">For Someone Extraordinary</h1>
+      <p class="subtitle" id="subtitle">
+        Click below and witness something intentional.
+      </p>
+      <button class="btn" id="trigger">
+        Reveal
+      </button>
+    </section>
+  </main>
+
+  <canvas id="canvas"></canvas>
+  <script src="app.js"></script>
+</body>
 </html>
